--- a/README.org
+++ b/README.org
@@ -6,5 +6,4 @@ The lambda function is a greedy algorithm that calculates the number of
 combinations in which change of x can be given provided the posible coins
 available.
 
-The function is a python script that uses tree recursion inspired [[https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-H-4.html#%_toc_%_sec_Temp_52][by this SICP
-example]]
+The function is a python script that uses tree recursion inspired [[https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-H-11.html#%_sec_1.2.2][by this SICP example]] 
